--- a/main.html
+++ b/main.html
@@ -411,7 +411,7 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/vendors.min.js"></script>
-<script defer src="js/app.js"></script>
+		<script defer src="js/vendors-main.min.js"></script>
+<script defer src="js/app-main.min.js"></script>
 	</body>
 </html>
