--- a/index.html
+++ b/index.html
@@ -874,6 +874,6 @@
 	</div>
 </div>
 		<script defer src="js/vendors.min.js"></script>
-<script defer src="js/app.js"></script>
+<script defer src="js/app.min.js"></script>
 	</body>
 </html>
