--- a/index.html
+++ b/index.html
@@ -450,52 +450,54 @@
 						<div class="feedback__body">
 							<h2 class="feedback__title">Каждый год возвращаем к нормальной жизни более 1 000 человек</h2>
 							<div class="feedback__content">
-								<div class="feedback__slider _swiper">
-									<div class="feedback__item item-feedback">
-										<h3 class="item-feedback__title">«...пил неделю... »</h3>
-										<p class="item-feedback__text">Обратилась в эту фирму по совету подруги для вывода из запоя вашем городе. Приехал доктор на дом, записал кардиограмму, рассказал (как вести себя в такой ситуации), вывел из запоя и расписал лечение в таблетках. Рекомендации выполнили, чувствуется профессионализм. Удобно, что круглосуточно.</p>
-										<div class="item-feedback__user">
-											<div class="item-feedback__avatar">
-												<picture>
-													<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-													<img data-src="img/avatar.png" src="" alt="">
-												</picture>
-											</div>
-											<div class="item-feedback__user-info">
-												<div class="item-feedback__name">Наталья</div>
-												<div class="item-feedback__date">11 марта 2016</div>
-											</div>
-										</div>
-									</div>
-									<div class="feedback__item item-feedback">
-										<h3 class="item-feedback__title">«Приятно было смотреть как человек работает и общается с пациентом»</h3>
-										<p class="item-feedback__text">Нужна было недорого вывести из запоя вашем городе. Обратилась в "Семейный доктор" к Григорию Петровичу. Огромное спасибо за предоставленную помощь, высокий профессионализм! При случае буду рада порекомендовать ваши услуги нуждающимся людям. Цена услуг приятно порадовала, недорого, хотя была целая тарелка ампул после выведения!</p>
-										<div class="item-feedback__user">
-											<div class="item-feedback__avatar">
-												<picture>
-													<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-													<img data-src="img/avatar.png" src="" alt="">
-												</picture>
-											</div>
-											<div class="item-feedback__user-info">
-												<div class="item-feedback__name">Наталия Анатольевна</div>
-												<div class="item-feedback__date">26.01.2016</div>
+								<div class="feedback__slider">
+									<div class="feedback__wrapper">
+										<div class="feedback__item item-feedback">
+											<h3 class="item-feedback__title">«...пил неделю... »</h3>
+											<p class="item-feedback__text">Обратилась в эту фирму по совету подруги для вывода из запоя вашем городе. Приехал доктор на дом, записал кардиограмму, рассказал (как вести себя в такой ситуации), вывел из запоя и расписал лечение в таблетках. Рекомендации выполнили, чувствуется профессионализм. Удобно, что круглосуточно.</p>
+											<div class="item-feedback__user">
+												<div class="item-feedback__avatar">
+													<picture>
+														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
+														<img data-src="img/avatar.png" src="" alt="">
+													</picture>
+												</div>
+												<div class="item-feedback__user-info">
+													<div class="item-feedback__name">Наталья</div>
+													<div class="item-feedback__date">11 марта 2016</div>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="feedback__item item-feedback">
-										<h3 class="item-feedback__title">«Тут и в вену попали и лечение расписали на листке»</h3>
-										<p class="item-feedback__text">Вначале обратилась к медсестре для вывода из запоя вашем городе, не попала в вену, исколола еще и наорала, что не будет выводить такого алкоголика из запоя, если он не хочет, развернулась и уехала!!!! После обратились к Вам - где отнеслись по-человечески! В вену попали и лечение расписали на листке. Самое удивительное - цена, недорого получилась, так как одного визита достаточно.</p>
-										<div class="item-feedback__user">
-											<div class="item-feedback__avatar">
-												<picture>
-													<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-													<img data-src="img/avatar.png" src="" alt="">
-												</picture>
+										<div class="feedback__item item-feedback">
+											<h3 class="item-feedback__title">«Приятно было смотреть как человек работает и общается с пациентом»</h3>
+											<p class="item-feedback__text">Нужна было недорого вывести из запоя вашем городе. Обратилась в "Семейный доктор" к Григорию Петровичу. Огромное спасибо за предоставленную помощь, высокий профессионализм! При случае буду рада порекомендовать ваши услуги нуждающимся людям. Цена услуг приятно порадовала, недорого, хотя была целая тарелка ампул после выведения!</p>
+											<div class="item-feedback__user">
+												<div class="item-feedback__avatar">
+													<picture>
+														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
+														<img data-src="img/avatar.png" src="" alt="">
+													</picture>
+												</div>
+												<div class="item-feedback__user-info">
+													<div class="item-feedback__name">Наталия Анатольевна</div>
+													<div class="item-feedback__date">26.01.2016</div>
+												</div>
 											</div>
-											<div class="item-feedback__user-info">
-												<div class="item-feedback__name">Вика</div>
-												<div class="item-feedback__date">18.01.2016</div>
+										</div>
+										<div class="feedback__item item-feedback">
+											<h3 class="item-feedback__title">«Тут и в вену попали и лечение расписали на листке»</h3>
+											<p class="item-feedback__text">Вначале обратилась к медсестре для вывода из запоя вашем городе, не попала в вену, исколола еще и наорала, что не будет выводить такого алкоголика из запоя, если он не хочет, развернулась и уехала!!!! После обратились к Вам - где отнеслись по-человечески! В вену попали и лечение расписали на листке. Самое удивительное - цена, недорого получилась, так как одного визита достаточно.</p>
+											<div class="item-feedback__user">
+												<div class="item-feedback__avatar">
+													<picture>
+														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
+														<img data-src="img/avatar.png" src="" alt="">
+													</picture>
+												</div>
+												<div class="item-feedback__user-info">
+													<div class="item-feedback__name">Вика</div>
+													<div class="item-feedback__date">18.01.2016</div>
+												</div>
 											</div>
 										</div>
 									</div>
