--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
 					<input class="form-popup__input _req" type="text" name="name" data-value="Представьтесь, пожалуйста" autocomplete="off">
 				</div>
 				<div class="form-popup__line">
-					<input class="form-popup__input _phone _req" type="text" name="tell" data-value="Номер телефона" autocomplete="off">
+					<input class="form-popup__input _phone _req" type="text" name="tell" data-value="+7(___)___-__-__" autocomplete="off">
 				</div>
 				<button class="form-popup__button btn" type="submit"><span>Жду звонка!</span></button>
 			</form>
@@ -865,7 +865,7 @@
 					<input class="form-popup__input _req" type="text" name="name" data-value="Представьтесь, пожалуйста" autocomplete="off">
 				</div>
 				<div class="form-popup__line">
-					<input class="form-popup__input _phone _req" type="text" name="tell" data-value="Номер телефона" autocomplete="off">
+					<input class="form-popup__input _phone _req" type="text" name="tell" data-value="+7(___)___-__-__" autocomplete="off">
 				</div>
 				<div class="form-popup__line">
 					<textarea class="form-popup__input" name="text" data-value="Текст отзыва"></textarea>
