--- a/main.html
+++ b/main.html
@@ -9,15 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
-	<!--<link rel="preload" href="fonts/FiraSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/FiraSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/PTSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/PTSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/FiraSans-Regular.woff" as="font" type="font/woff" crossorigin>
-	<link rel="preload" href="fonts/FiraSans-Bold.woff" as="font" type="font/woff" crossorigin>
-	<link rel="preload" href="fonts/PTSans-Regular.woff" as="font" type="font/woff" crossorigin>
-	<link rel="preload" href="fonts/PTSans-Bold.woff" as="font" type="font/woff" crossorigin>-->
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -411,7 +403,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/vendors-main.min.js"></script>
-<script defer src="js/app-main.min.js"></script>
+		<script defer src="js/app-main.min.js"></script>
 	</body>
 </html>
