--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 			<main class="page">
 				<!--preview start-->
 				<section class="preview">
+					<div class="preview__image">
+						<picture>
+							<source data-srcset="img/top-screen-bg.jpg" srcset="" media="(min-width: 1023.98px)">
+							<source data-srcset="img/top-screen-mobile.jpg" srcset="" media="(min-width: 479.98px)">
+							<img data-src="img/top-screen-mobile-small.jpg" src="" alt="">
+						</picture>
+					</div>
 					<div class="_container">
 						<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> {вашем городе}</h1>
 						<p class="preview__text">Будем в течение 1 часа!</p>
