--- a/articles.html
+++ b/articles.html
@@ -65,171 +65,62 @@
 </header>
 			<main class="page">
 
-        <!--main start-->
-        <section class="main">
+        <!--breadcrumbs start-->
+        <div class="breadcrumbs">
           <div class="_container">
-            <h1 class="main__title">Наркологическая клиника <br><span>{вашем городе}</span></h1>
-            <div class="main__subtitle">лечение и реабилитация зависимых</div>
-            <div class="main__text">Компетентно. Ответственно. Эффективно.</div>
-            <div class="main__footer">
-              <div class="main__image">
-                <picture>
-                  <source data-srcset="img/logo-big.webp" srcset="" type="image/webp">
-                  <img data-src="img/logo-big.png" src="" alt="">
-                </picture>
-              </div>
-              <div class="main__control">
-                <a href="#consultation" class="main__button btn _popup-link"><span>Консультация врача бесплатно</span><span>Бесплатная консультация</span></a>
-                <div class="main__phone">
-                  <span>Или позвоните нам</span>
-                  <a href="tel:+79581117219">{+7(958)111-7-219}</a>
-                </div>
-              </div>
+            <ul class="breadcrumbs__list">
+              <li><a href="main.html" class="breadcrumbs__item">Главная</a></li>
+              <li><a href="main.html" class="breadcrumbs__item breadcrumbs__item_active">Статьи</a></li>
+            </ul>
+          </div>
+        </div>
+        <!--breadcrumbs end-->
+				
+        <!--article start-->
+        <section class="article">
+          <div class="_container">
+            <h1 class="article__title">О med24.online</h1>
+            <p class="article__text">Med24.online помогает людям избавиться от алкозависимости и наркозависимости, консультирует по вопросам лечения. Оказывает психологическую помощь родственникам зависимых.</p>
+            <div class="article__body">
+              <ul class="article__list">
+                <li><a href="#" class="article__link article__link_title">О платформе med24.online</a></li>
+                <li><a href="#" class="article__link">Задачи и цели</a></li>
+                <li><a href="#" class="article__link">Целевая аудитория</a></li>
+                <li><a href="#" class="article__link">Финансирование</a></li>
+                <li><a href="#" class="article__link">Политика в отношении рекламы</a></li>
+                <li><a href="#" class="article__link">Политика публикации материалов</a></li>
+                <li><a href="#" class="article__link">Политика в области авторских и смежных прав</a></li>
+                <li><a href="#" class="article__link">Выписка из реестра зарегистрированных СМИ</a></li>
+                <li><a href="#" class="article__link">Политика публикации информации о лекарствах</a></li>
+              </ul>
+              <ul class="article__list">
+                <li><a href="#" class="article__link article__link_title">Связаться с med24.online</a></li>
+                <li><a href="#" class="article__link">Контакты руководства</a></li>
+                <li><a href="#" class="article__link">Контакты главного редактора</a></li>
+                <li><a href="#" class="article__link">Отдел по управлению персоналом</a></li>
+                <li><a href="#" class="article__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
+              </ul>
+              <ul class="article__list">
+                <li><a href="#" class="article__link article__link_title">IT-безопасность</a></li>
+                <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
+                <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
+                <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
+              </ul>
+              <ul class="article__list">
+                <li><a href="#" class="article__link article__link_title">О компании Семейный Доктор</a></li>
+                <li><a href="#" class="article__link">Главный офис</a></li>
+                <li><a href="#" class="article__link">О нашей компании</a></li>
+                <li><a href="#" class="article__link">Реквизиты</a></li>
+                <li><a href="#" class="article__link">Лицензии на медицинскую деятельность</a></li>
+                <li><a href="#" class="article__link">Платежные реквизиты</a></li>
+                <li><a href="#" class="article__link">Медицинский персонал</a></li>
+                <li><a href="#" class="article__link">Вакансии компании</a></li>
+                <li><a href="#" class="article__link">Партнерство и сотрудничество</a></li>
+              </ul>
             </div>
           </div>
         </section>
-        <!--main end-->
-
-				<!--services start-->
-				<section class="services">
-					<div class="_container">
-						<h2 class="services__title title-section">Наши услуги</h2>
-						<div class="services__body">
-							<div class="services__item item-services item-services_01 _anim-items _anim-no-hide">
-								<a href="#" class="item-services__preview item-services__preview_01">
-									<h3>Лечение <br> алкоголизма</h3>
-								</a>
-								<ul class="item-services__list">
-									<li><a href="#" class="item-services__link">Вывод из запоя в стационаре</a></li>
-									<li><a href="#" class="item-services__link">Выведение из запоя на дому</a></li>
-									<li><a href="#" class="item-services__link">Кодирование от алкоголизма</a></li>
-								</ul>
-							</div>
-							<div class="services__item item-services  item-services_02 _anim-items _anim-no-hide">
-								<a href="#" class="item-services__preview item-services__preview_02">
-									<h3>Лечение <br> наркомании</h3>
-								</a>
-								<ul class="item-services__list">
-									<li><a href="#" class="item-services__link">Нарколог на дом</a></li>
-									<li><a href="#" class="item-services__link">Наркологическая помощь</a></li>
-								</ul>
-							</div>
-							<div class="services__item item-services  item-services_03 _anim-items _anim-no-hide">
-								<a href="#" class="item-services__preview item-services__preview_03">
-									<h3>А так же <br> другие услуги</h3>
-								</a>
-								<ul class="item-services__list">
-									<li><a href="#" class="item-services__link">Капельница на дому</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!--services end-->
-
-				<!--caption start-->
-				<section class="caption">
-					<div class="_container">
-						<div class="caption__body">
-							<div class="caption__image">
-								<picture>
-									<source data-srcset="img/car-image.webp" srcset="" type="image/webp">
-									<img data-src="img/car-image.png" src="" alt="">
-								</picture>
-							</div>
-							<div class="caption__logo">
-								<picture>
-									<source data-srcset="img/logo-big.webp" srcset="" type="image/webp">
-									<img data-src="img/logo-big.png" src="" alt="">
-								</picture>
-							</div>
-							<h2 class="caption__text"><span>Вызов нарколога</span><br> на дом <b>{вашем городе}</b></h2>
-							<a href="#call" class="caption__button btn _popup-link"><span>Вызвать врача</span></a>
-						</div>
-					</div>
-				</section>
-				<!--caption end-->
-
-				<!--licence start-->
-				<section class="licence">
-					<div class="_container">
-						<h2 class="licence__title title-section">Мы компетентны. У нас есть лицензия</h2>
-						<div class="licence__body">
-							<div class="licence__content">
-								<div class="licence__slogan">Мы работаем на основе лицензии</div>
-								<div class="licence__text">Дающей право на осуществление медицинской деятельности. Ксерокопию документа вы вправе потребовать у врача, приехавшего на вызов.</div>
-								<a href="#consultation" class="licence__button main__button btn _popup-link"><span>Консультация врача бесплатно</span><span>Бесплатная консультация</span></a>
-							</div>
-							<div class="licence__image">
-								<picture>
-									<source data-srcset="img/conditions/man-license.webp" srcset="" type="image/webp">
-									<img data-src="img/conditions/man-license.png" src="" alt="">
-								</picture>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!--licence end-->
-
-				<!--articles start-->
-				<section class="articles">
-					<div class="_container">
-						<h2 class="articles__title title-section">Полезные статьи</h2>
-						<div class="articles__body">
-							<div class="articles__column articles__column_big">
-								<a href="#" class="articles__item item-articles item-articles_01">
-									<div class="item-articles__content">
-										<div class="item-articles__date">19 июля 2018</div>
-										<h3 class="item-articles__title">3 главных правила лечения алкоголизма</h3>
-										<button class="item-articles__button">Детальнее</button>
-									</div>
-								</a>
-							</div>
-							<div class="articles__column articles__column_small">
-								<a href="#" class="articles__item item-articles item-articles_02">
-									<div class="item-articles__content">
-										<div class="item-articles__date">19 июля 2018</div>
-										<h3 class="item-articles__title">Что такое кодировка</h3>
-									</div>
-								</a>
-								<a href="#" class="articles__item item-articles item-articles_03">
-									<div class="item-articles__content">
-										<div class="item-articles__date">19 июля 2018</div>
-										<h3 class="item-articles__title">Выведение из запоя домашними способами</h3>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!--articles end-->
-
-				<!--page-form start-->
-				<section class="page-form">
-					<div class="_container">
-						<div class="page-form__body">
-							<div class="page-form__image page-form__image_1">
-								<picture>
-									<source data-srcset="img/page-form/doctor4.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/doctor4.png" src="" alt="">
-								</picture>
-							</div>
-							<div class="page-form__content">
-								<h2 class="page-form__title page-form__title_main section__title"><span>Внимание!</span><br class="page-form__br"> При оказании<br> наркологической помощи <span>на дому</span><br> скидка по кодированию!</h2>
-								<a href="#consultation" class="page-form__button btn _popup-link"><span>Вызвать врача на дом</span></a>
-								<div class="page-form__note">Или позвоните<br class="page-form__br"> <a href="tel:+79581117219">{+7(958)111-7-219}</a></div>
-							</div>
-							<div class="page-form__image page-form__image_2">
-								<picture>
-									<source data-srcset="img/page-form/label-anon4.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/label-anon4.png" src="" alt="">
-								</picture>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!--page-form end-->
-				
+        <!--article end-->
 			</main>
 			<footer class="header header_footer">
 	<div class="header__content _container">
