--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<ul class="menu-header__list">
 				<li><a href="main.html" class="menu-header__link">Главная</a></li>
 				<li><a href="#" class="menu-header__link">Услуги и цены</a></li>
-				<li><a href="#" class="menu-header__link">Статьи</a></li>
+				<li><a href="articles.html" class="menu-header__link">Статьи</a></li>
 				<li><a href="#" class="menu-header__link">Отзывы</a></li>
 				<li><a href="#" class="menu-header__link">Почему мы</a></li>
 				<li><a href="#" class="menu-header__link">Контакты</a></li>
