--- a/articles.html
+++ b/articles.html
@@ -9,8 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="preload" href="img/top-screen-mobile-small.jpg" as="image" />
+	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -81,42 +80,50 @@
           <div class="_container">
             <h1 class="article__title">О med24.online</h1>
             <p class="article__text">Med24.online помогает людям избавиться от алкозависимости и наркозависимости, консультирует по вопросам лечения. Оказывает психологическую помощь родственникам зависимых.</p>
-            <div class="article__body">
-              <ul class="article__list">
-                <li><a href="#" class="article__link article__link_title">О платформе med24.online</a></li>
-                <li><a href="#" class="article__link">Задачи и цели</a></li>
-                <li><a href="#" class="article__link">Целевая аудитория</a></li>
-                <li><a href="#" class="article__link">Финансирование</a></li>
-                <li><a href="#" class="article__link">Политика в отношении рекламы</a></li>
-                <li><a href="#" class="article__link">Политика публикации материалов</a></li>
-                <li><a href="#" class="article__link">Политика в области авторских и смежных прав</a></li>
-                <li><a href="#" class="article__link">Выписка из реестра зарегистрированных СМИ</a></li>
-                <li><a href="#" class="article__link">Политика публикации информации о лекарствах</a></li>
-              </ul>
-              <ul class="article__list">
-                <li><a href="#" class="article__link article__link_title">Связаться с med24.online</a></li>
-                <li><a href="#" class="article__link">Контакты руководства</a></li>
-                <li><a href="#" class="article__link">Контакты главного редактора</a></li>
-                <li><a href="#" class="article__link">Отдел по управлению персоналом</a></li>
-                <li><a href="#" class="article__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
-              </ul>
-              <ul class="article__list">
-                <li><a href="#" class="article__link article__link_title">IT-безопасность</a></li>
-                <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
-                <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
-                <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
-              </ul>
-              <ul class="article__list">
-                <li><a href="#" class="article__link article__link_title">О компании Семейный Доктор</a></li>
-                <li><a href="#" class="article__link">Главный офис</a></li>
-                <li><a href="#" class="article__link">О нашей компании</a></li>
-                <li><a href="#" class="article__link">Реквизиты</a></li>
-                <li><a href="#" class="article__link">Лицензии на медицинскую деятельность</a></li>
-                <li><a href="#" class="article__link">Платежные реквизиты</a></li>
-                <li><a href="#" class="article__link">Медицинский персонал</a></li>
-                <li><a href="#" class="article__link">Вакансии компании</a></li>
-                <li><a href="#" class="article__link">Партнерство и сотрудничество</a></li>
-              </ul>
+            <div class="article__body  _spollers _one">
+              <div class="article__item">
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О платформе med24.online</a><span class="article__icon"></span></h2>
+                <ul class="article__list">
+                  <li><a href="#" class="article__link">Задачи и цели</a></li>
+                  <li><a href="#" class="article__link">Целевая аудитория</a></li>
+                  <li><a href="#" class="article__link">Финансирование</a></li>
+                  <li><a href="#" class="article__link">Политика в отношении рекламы</a></li>
+                  <li><a href="#" class="article__link">Политика публикации материалов</a></li>
+                  <li><a href="#" class="article__link">Политика в области авторских и смежных прав</a></li>
+                  <li><a href="#" class="article__link">Выписка из реестра зарегистрированных СМИ</a></li>
+                  <li><a href="#" class="article__link">Политика публикации информации о лекарствах</a></li>
+                </ul>
+              </div>
+              <div class="article__item">
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Связаться с med24.online</a><span class="article__icon"></span></h2>
+                <ul class="article__list">
+                  <li><a href="#" class="article__link">Контакты руководства</a></li>
+                  <li><a href="#" class="article__link">Контакты главного редактора</a></li>
+                  <li><a href="#" class="article__link">Отдел по управлению персоналом</a></li>
+                  <li><a href="#" class="article__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
+                </ul>
+              </div>
+              <div class="article__item">
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">IT-безопасность</a><span class="article__icon"></span></h2>
+                <ul class="article__list">
+                  <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
+                  <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
+                  <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
+                </ul>
+              </div>
+              <div class="article__item">
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О компании Семейный Доктор</a><span class="article__icon"></span></h2>
+                <ul class="article__list">
+                  <li><a href="#" class="article__link">Главный офис</a></li>
+                  <li><a href="#" class="article__link">О нашей компании</a></li>
+                  <li><a href="#" class="article__link">Реквизиты</a></li>
+                  <li><a href="#" class="article__link">Лицензии на медицинскую деятельность</a></li>
+                  <li><a href="#" class="article__link">Платежные реквизиты</a></li>
+                  <li><a href="#" class="article__link">Медицинский персонал</a></li>
+                  <li><a href="#" class="article__link">Вакансии компании</a></li>
+                  <li><a href="#" class="article__link">Партнерство и сотрудничество</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
