--- a/about.html
+++ b/about.html
@@ -69,70 +69,90 @@
           <div class="_container">
             <ul class="breadcrumbs__list">
               <li><a href="main.html" class="breadcrumbs__item">Главная</a></li>
-              <li><a href="articles.html" class="breadcrumbs__item breadcrumbs__item_active">Статьи</a></li>
+              <li><a href="services.html" class="breadcrumbs__item">Сервис</a></li>
+              <li><a href="about.html" class="breadcrumbs__item breadcrumbs__item_active">О нашей компании</a></li>
             </ul>
           </div>
         </div>
         <!--breadcrumbs end-->
 
-        <section class="article-main">
+        <section class="about">
           <div class="_container">
-            <h1 class="article-main__title">О <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
-            <p class="article-main__text">Med24.online помогает людям избавиться от алкозависимости и наркозависимости, консультирует по вопросам лечения. Оказывает психологическую помощь родственникам зависимых.</p>
-          </div>
-        </section>
-				
-        <!--article start-->
-        <section class="article">
-          <div class="_container">
-            <div class="article__body  _spollers _one">
-              <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О платформе med24.online</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Задачи и цели</a></li>
-                  <li><a href="#" class="article__link">Целевая аудитория</a></li>
-                  <li><a href="#" class="article__link">Финансирование</a></li>
-                  <li><a href="#" class="article__link">Политика в отношении рекламы</a></li>
-                  <li><a href="#" class="article__link">Политика публикации материалов</a></li>
-                  <li><a href="#" class="article__link">Политика в области авторских и смежных прав</a></li>
-                  <li><a href="#" class="article__link">Выписка из реестра зарегистрированных СМИ</a></li>
-                  <li><a href="#" class="article__link">Политика публикации информации о лекарствах</a></li>
+            <div class="about__body">
+              <div class="about__column about__column_left _spollers _one">
+                <div class="about__item item-about">
+                  <h2 class="_spoller"><a href="#" class="item-about__title">О платформе med24.online</a><span class="item-about__icon"></span></h2>
+                  <ul class="item-about__list">
+                    <li><a href="#" class="item-about__link">Задачи и цели</a></li>
+                    <li><a href="#" class="item-about__link">Целевая аудитория</a></li>
+                    <li><a href="#" class="item-about__link">Финансирование</a></li>
+                    <li><a href="#" class="item-about__link">Политика в отношении рекламы</a></li>
+                    <li><a href="#" class="item-about__link">Политика публикации материалов</a></li>
+                    <li><a href="#" class="item-about__link">Политика в области авторских и смежных прав</a></li>
+                    <li><a href="#" class="item-about__link">Выписка из реестра зарегистрированных СМИ</a></li>
+                    <li><a href="#" class="item-about__link">Политика публикации информации о лекарствах</a></li>
+                  </ul>
+                </div>
+                <div class="about__item item-about">
+                  <h2 class="_spoller"><a href="#" class="item-about__title">Связаться с med24.online</a><span class="item-about__icon"></span></h2>
+                  <ul class="item-about__list">
+                    <li><a href="#" class="item-about__link">Контакты руководства</a></li>
+                    <li><a href="#" class="item-about__link">Контакты главного редактора</a></li>
+                    <li><a href="#" class="item-about__link">Отдел по управлению персоналом</a></li>
+                    <li><a href="#" class="item-about__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
+                  </ul>
+                </div>
+                <div class="about__item item-about">
+                  <h2 class="_spoller"><a href="#" class="item-about__title">IT-безопасность</a><span class="item-about__icon"></span></h2>
+                  <ul class="item-about__list">
+                    <li><a href="#" class="item-about__link">Политика конфиденциальности</a></li>
+                    <li><a href="#" class="item-about__link">Пользовательское соглашение</a></li>
+                    <li><a href="#" class="item-about__link">Политика в отношении файлов Cookie</a></li>
+                  </ul>
+                </div>
+                <div class="about__item item-about">
+                  <h2 class="_spoller"><a href="#" class="item-about__title">О компании Семейный Доктор</a><span class="item-about__icon"></span></h2>
+                  <ul class="item-about__list">
+                    <li><a href="#" class="item-about__link">Главный офис</a></li>
+                    <li><a href="#" class="item-about__link">О нашей компании</a></li>
+                    <li><a href="#" class="item-about__link">Реквизиты</a></li>
+                    <li><a href="#" class="item-about__link">Лицензии на медицинскую деятельность</a></li>
+                    <li><a href="#" class="item-about__link">Платежные реквизиты</a></li>
+                    <li><a href="#" class="item-about__link">Медицинский персонал</a></li>
+                    <li><a href="#" class="item-about__link">Вакансии компании</a></li>
+                    <li><a href="#" class="item-about__link">Партнерство и сотрудничество</a></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="about__column about__column_middle">
+                <h1 class="about__title">О нашей компании</h1>
+                <p class="about__text">Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто наблюдается кровотечение кожи и слизистых оболочек. Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто наблюдается кровотечение кожи и слизистых оболочек. Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто наблюдается кровотечение кожи и слизистых оболочек. Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто наблюдается кровотечение кожи и слизистых оболочек.</p>
+                <h2 class="about__title-list">О нашей компании</h2>
+                <ul class="about__list">
+                  <li>Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто <a href="#">наблюдается</a> кровотечение кожи и слизистых оболочек.</li>
+                  <li>Лейкоз: обычно больной страдает болями в костях и суставах. Может быть опухали лимфатических узлов и гепатоспленомегалия. Часто <a href="#">наблюдается</a> кровотечение кожи и слизистых оболочек.</li>
                 </ul>
               </div>
-              <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Связаться с med24.online</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Контакты руководства</a></li>
-                  <li><a href="#" class="article__link">Контакты главного редактора</a></li>
-                  <li><a href="#" class="article__link">Отдел по управлению персоналом</a></li>
-                  <li><a href="#" class="article__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
-                </ul>
-              </div>
-              <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">IT-безопасность</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
-                  <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
-                  <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
-                </ul>
-              </div>
-              <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О компании Семейный Доктор</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Главный офис</a></li>
-                  <li><a href="#" class="article__link">О нашей компании</a></li>
-                  <li><a href="#" class="article__link">Реквизиты</a></li>
-                  <li><a href="#" class="article__link">Лицензии на медицинскую деятельность</a></li>
-                  <li><a href="#" class="article__link">Платежные реквизиты</a></li>
-                  <li><a href="#" class="article__link">Медицинский персонал</a></li>
-                  <li><a href="#" class="article__link">Вакансии компании</a></li>
-                  <li><a href="#" class="article__link">Партнерство и сотрудничество</a></li>
-                </ul>
+
+              <div class="about__column about__column_right">
+                <div class="about__contents contents-about">
+                  <h2 class="contents-about__title">Оглавление</h2>
+                  <div class="contents-about__body">
+                    <h3 class="contents-about__title-list">Общие положения</h3>
+                    <ul class="contents-about__list">
+                      <li><a href="#" class="contents-about__link">Предмет политики конфендициальности</a></li>
+                      <li><a href="#" class="contents-about__link">Цели сбора персональной информации пользователя</a></li>
+                    </ul>
+                    <a href="#" class="contents-about__link">Способы и сроки обработки персональной информации</a>
+                    <a href="#" class="contents-about__link">Разрешение споров</a>
+                    <a href="#" class="contents-about__link">Дополнительные условия</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </section>
-        <!--article end-->
 			</main>
 			<footer class="header header_footer">
 	<div class="header__content _container">
