--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
 				<li><a href="#" class="menu-header__link">Услуги и цены</a></li>
 				<li><a href="articles.html" class="menu-header__link">Статьи</a></li>
 				<li><a href="#" class="menu-header__link">Отзывы</a></li>
-				<li><a href="#" class="menu-header__link">Почему мы</a></li>
+				<li><a href="services.html" class="menu-header__link">Сервис</a></li>
 				<li><a href="#" class="menu-header__link">Контакты</a></li>
 			</ul>
 			<a href="#consultation" class="menu-header__button btn _popup-link"><span>Консультация</span></a>
