--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
           <div class="_container">
             <ul class="breadcrumbs__list">
               <li><a href="main.html" class="breadcrumbs__item">Главная</a></li>
-              <li><a href="articles.html" class="breadcrumbs__item breadcrumbs__item_active">Статьи</a></li>
+              <li><a href="services.html" class="breadcrumbs__item breadcrumbs__item_active">Сервис</a></li>
             </ul>
           </div>
         </div>
@@ -77,57 +77,33 @@
 
         <section class="article-main">
           <div class="_container">
-            <h1 class="article-main__title">О <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
-            <p class="article-main__text">Med24.online помогает людям избавиться от алкозависимости и наркозависимости, консультирует по вопросам лечения. Оказывает психологическую помощь родственникам зависимых.</p>
+            <h1 class="article-main__title">Сервис <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
           </div>
         </section>
 				
         <!--article start-->
         <section class="article">
           <div class="_container">
+            <div class="article__main-icon"><img src="img/icons/computer.svg" alt=""></div>
             <div class="article__body  _spollers _one">
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О платформе med24.online</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><a href="about.html" class="article__title-list">О med24.online</a><span class="article__icon"></span></h2>
                 <ul class="article__list">
-                  <li><a href="#" class="article__link">Задачи и цели</a></li>
-                  <li><a href="#" class="article__link">Целевая аудитория</a></li>
-                  <li><a href="#" class="article__link">Финансирование</a></li>
-                  <li><a href="#" class="article__link">Политика в отношении рекламы</a></li>
-                  <li><a href="#" class="article__link">Политика публикации материалов</a></li>
-                  <li><a href="#" class="article__link">Политика в области авторских и смежных прав</a></li>
-                  <li><a href="#" class="article__link">Выписка из реестра зарегистрированных СМИ</a></li>
-                  <li><a href="#" class="article__link">Политика публикации информации о лекарствах</a></li>
+                  <li><a href="#" class="article__link">О компании Семейный Доктор</a></li>
+                  <li><a href="#" class="article__link">IT-Безопасность</a></li>
+                  <li><a href="#" class="article__link">Связаться med24.online</a></li>
+                  <li><a href="#" class="article__link article__link_all">Посмотреть все</a></li>
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Связаться с med24.online</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Новости</a><span class="article__icon"></span></h2>
                 <ul class="article__list">
-                  <li><a href="#" class="article__link">Контакты руководства</a></li>
-                  <li><a href="#" class="article__link">Контакты главного редактора</a></li>
-                  <li><a href="#" class="article__link">Отдел по управлению персоналом</a></li>
-                  <li><a href="#" class="article__link">Отдел по работе с корпоративными клиентами и предложениями по рекламе</a></li>
+                  <li><a href="#" class="article__link">Блог</a></li>
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">IT-безопасность</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
-                  <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
-                  <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
-                </ul>
-              </div>
-              <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О компании Семейный Доктор</a><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Главный офис</a></li>
-                  <li><a href="#" class="article__link">О нашей компании</a></li>
-                  <li><a href="#" class="article__link">Реквизиты</a></li>
-                  <li><a href="#" class="article__link">Лицензии на медицинскую деятельность</a></li>
-                  <li><a href="#" class="article__link">Платежные реквизиты</a></li>
-                  <li><a href="#" class="article__link">Медицинский персонал</a></li>
-                  <li><a href="#" class="article__link">Вакансии компании</a></li>
-                  <li><a href="#" class="article__link">Партнерство и сотрудничество</a></li>
-                </ul>
+                <h2><a href="#" class="article__title-list">Информационный раздел</a><span class="article__icon"></span></h2>
+                <h2><a href="#" class="article__title-list">Права и законы в медицине</a><span class="article__icon"></span></h2>
               </div>
             </div>
           </div>
