--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<li><a href="#" class="menu-header__link">Услуги и цены</a></li>
 				<li><a href="articles.html" class="menu-header__link">Статьи</a></li>
 				<li><a href="#" class="menu-header__link">Отзывы</a></li>
-				<li><a href="#" class="menu-header__link">Почему мы</a></li>
+				<li><a href="services.html" class="menu-header__link">Сервис</a></li>
 				<li><a href="#" class="menu-header__link">Контакты</a></li>
 			</ul>
 			<a href="#callback" class="menu-header__button btn _popup-link"><span>Вызвать врача</span></a>
