--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <div class="about__body">
               <div class="about__column about__column_left _spollers _one">
                 <div class="about__item item-about">
-                  <h2 class="_spoller"><a href="#" class="item-about__title">О платформе med24.online</a><span class="item-about__icon"></span></h2>
+                  <h2 class="_spoller"><span class="item-about__title">О платформе med24.online</span><span class="item-about__icon"></span></h2>
                   <ul class="item-about__list">
                     <li><a href="#" class="item-about__link">Задачи и цели</a></li>
                     <li><a href="#" class="item-about__link">Целевая аудитория</a></li>
@@ -94,7 +94,7 @@
                   </ul>
                 </div>
                 <div class="about__item item-about">
-                  <h2 class="_spoller"><a href="#" class="item-about__title">Связаться с med24.online</a><span class="item-about__icon"></span></h2>
+                  <h2 class="_spoller"><span class="item-about__title">Связаться с med24.online</span><span class="item-about__icon"></span></h2>
                   <ul class="item-about__list">
                     <li><a href="#" class="item-about__link">Контакты руководства</a></li>
                     <li><a href="#" class="item-about__link">Контакты главного редактора</a></li>
@@ -103,7 +103,7 @@
                   </ul>
                 </div>
                 <div class="about__item item-about">
-                  <h2 class="_spoller"><a href="#" class="item-about__title">IT-безопасность</a><span class="item-about__icon"></span></h2>
+                  <h2 class="_spoller"><span class="item-about__title">IT-безопасность</span><span class="item-about__icon"></span></h2>
                   <ul class="item-about__list">
                     <li><a href="#" class="item-about__link">Политика конфиденциальности</a></li>
                     <li><a href="#" class="item-about__link">Пользовательское соглашение</a></li>
@@ -111,7 +111,7 @@
                   </ul>
                 </div>
                 <div class="about__item item-about">
-                  <h2 class="_spoller"><a href="#" class="item-about__title">О компании Семейный Доктор</a><span class="item-about__icon"></span></h2>
+                  <h2 class="_spoller"><span class="item-about__title">О компании Семейный Доктор</span><span class="item-about__icon"></span></h2>
                   <ul class="item-about__list">
                     <li><a href="#" class="item-about__link">Главный офис</a></li>
                     <li><a href="#" class="item-about__link">О нашей компании</a></li>
