--- a/articles.html
+++ b/articles.html
@@ -87,7 +87,7 @@
           <div class="_container">
             <div class="article__body  _spollers _one">
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О платформе med24.online</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О платформе med24.online</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Задачи и цели</a></li>
                   <li><a href="#" class="article__link">Целевая аудитория</a></li>
@@ -100,7 +100,7 @@
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Связаться с med24.online</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">Связаться с med24.online</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Контакты руководства</a></li>
                   <li><a href="#" class="article__link">Контакты главного редактора</a></li>
@@ -109,7 +109,7 @@
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">IT-безопасность</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">IT-безопасность</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
                   <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
@@ -117,7 +117,7 @@
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">О компании Семейный Доктор</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О компании Семейный Доктор</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Главный офис</a></li>
                   <li><a href="#" class="article__link">О нашей компании</a></li>
